[package]
name = "agil_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
unsafe_de = []

[dependencies]
futures = "0.3.30"
serde = "1.0.197"
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = "1.36.0"
tokio-tungstenite = "0.21.0"

[dev-dependecies]
