[package]
name = "agil_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
unsafe_de = []

[dependencies]
bytes = "1.6.0"
chrono = "0.4.37"
criterion = "0.5.1"
fastwebsockets = { version = "0.7.1", features = ["upgrade"] }
http-body-util = "0.1.1"
hyper = "1.2.0"
hyper-util = "0.1.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = {version = "1.37.0", features = ["full"]}
tokio-rustls = "0.26.0"
webpki-roots = "0.26.1"

